Fixed collapse btn not in sync

--- a/app/assets/stylesheets/components/_buttons.css.scss
+++ b/app/assets/stylesheets/components/_buttons.css.scss
@@ -8,7 +8,12 @@
   }
 }
 
+.user-sync .collapse-btn {
+  display: block;
+}
+
 .collapse-btn {
+  display: none;
   cursor: pointer;
   vertical-align: middle;
 
